<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="50dp"
            android:text="Registration"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/fullname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/emails"
            android:text="Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/birthdate"
            android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_birthdate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/_18_05_1990"
        android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/re_enter_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_password1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/pin_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_pin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="***"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/textPin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:text="Re enter PIN Number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_pin1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:hint="***"
            android:ems="10"
            android:inputType="numberPassword" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:text="Register"

        android:textAlignment="center" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:text="Login"

        android:textAlignment="center" />


        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pin" />

    </LinearLayout>
</ScrollView>